--- a/talk/index.html
+++ b/talk/index.html
@@ -31,7 +31,7 @@
   <meta name="description" content="Ph.D. Student">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://harry-up.github.io/talk/">
+  <link rel="alternate" hreflang="en-us" href="http://weihan95.com/talk/">
 
   
 
@@ -99,7 +99,7 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://harry-up.github.io/talk/">
+  <link rel="canonical" href="http://weihan95.com/talk/">
 
   
   
@@ -111,9 +111,9 @@
   <meta property="twitter:card" content="summary">
   
   <meta property="og:site_name" content="Wei Han">
-  <meta property="og:url" content="https://harry-up.github.io/talk/">
+  <meta property="og:url" content="http://weihan95.com/talk/">
   <meta property="og:title" content="Recent &amp; Upcoming Talks | Wei Han">
-  <meta property="og:description" content="Ph.D. Student"><meta property="og:image" content="https://harry-up.github.io/img/icon-192.png">
+  <meta property="og:description" content="Ph.D. Student"><meta property="og:image" content="http://weihan95.com/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
