--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
   <meta name="description" content="Ph.D. Student">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://harry-up.github.io/404.html">
+  <link rel="alternate" hreflang="en-us" href="http://weihan95.com/404.html">
 
   
 
@@ -96,7 +96,7 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://harry-up.github.io/404.html">
+  <link rel="canonical" href="http://weihan95.com/404.html">
 
   
   
@@ -108,9 +108,9 @@
   <meta property="twitter:card" content="summary">
   
   <meta property="og:site_name" content="Wei Han">
-  <meta property="og:url" content="https://harry-up.github.io/404.html">
+  <meta property="og:url" content="http://weihan95.com/404.html">
   <meta property="og:title" content="404 Page not found | Wei Han">
-  <meta property="og:description" content="Ph.D. Student"><meta property="og:image" content="https://harry-up.github.io/img/icon-192.png">
+  <meta property="og:description" content="Ph.D. Student"><meta property="og:image" content="http://weihan95.com/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
