--- a/publication/neuroimage2019/index.html
+++ b/publication/neuroimage2019/index.html
@@ -348,7 +348,7 @@
 
 <div class="article-header d-xl-none">
   <div class="featured-image" style="background-image: url('/publication/neuroimage2019/featured_hu45f8e432b590fe5a33ad63b6e52c7b8e_498367_800x0_resize_q90_lanczos.jpg');"></div>
-  <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/jdD8gXaTZsc" target="_blank"><strong>Unsplash</strong></a></span>
+  
 </div>
 
 
@@ -478,7 +478,7 @@
     <div class="col-6">
       <div class="split-header-image">
         <img src="/publication/neuroimage2019/featured_hu45f8e432b590fe5a33ad63b6e52c7b8e_498367_680x500_fill_q90_lanczos_smart1.jpg" itemprop="image" alt="">
-        <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/jdD8gXaTZsc" target="_blank"><strong>Unsplash</strong></a></span>
+        
       </div>
     </div>
   </div>
@@ -649,20 +649,7 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><div class="alert alert-note">
-  <div>
-    Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
-  </div>
-</div>
-
-<div class="alert alert-note">
-  <div>
-    Click the <em>Slides</em> button above to demo Academic&rsquo;s Markdown slides feature.
-  </div>
-</div>
-
-<p>Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/" target="_blank">code and math</a>.</p>
-</div>
+    <div class="article-style"></div>
 
     
 
