--- a/404.html
+++ b/404.html
@@ -295,7 +295,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#teachings"><span>Teaching Assistants</span></a>
+          <a class="nav-link " href="/#teachings"><span>Personal Activities</span></a>
         </li>
 
         
