--- a/publication/icdm2017/index.html
+++ b/publication/icdm2017/index.html
@@ -296,7 +296,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#teachings"><span>Teaching Assistants</span></a>
+          <a class="nav-link " href="/#teachings"><span>Personal Activities</span></a>
         </li>
 
         
