--- a/talk/capsule-neural-network-and-discussion-on-synchronization-neural-network/index.html
+++ b/talk/capsule-neural-network-and-discussion-on-synchronization-neural-network/index.html
@@ -297,7 +297,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#teachings"><span>Teaching Assistants</span></a>
+          <a class="nav-link " href="/#teachings"><span>Personal Activities</span></a>
         </li>
 
         
