--- a/talk/representation-based-transfer-learning-and-some-advances/index.html
+++ b/talk/representation-based-transfer-learning-and-some-advances/index.html
@@ -297,7 +297,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#teachings"><span>Teaching Assistants</span></a>
+          <a class="nav-link " href="/#teachings"><span>Personal Activities</span></a>
         </li>
 
         
