--- a/talk/tutorial-on-tensorflow-usage/index.html
+++ b/talk/tutorial-on-tensorflow-usage/index.html
@@ -297,7 +297,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#teachings"><span>Teaching Assistants</span></a>
+          <a class="nav-link " href="/#teachings"><span>Personal Activities</span></a>
         </li>
 
         
