--- a/talk/capsule-neural-network-and-discussion-on-synchronization-neural-network/index.html
+++ b/talk/capsule-neural-network-and-discussion-on-synchronization-neural-network/index.html
@@ -620,7 +620,7 @@
             
           
           <li>
-            <a itemprop="sameAs" href="https://www.linkedin.com/in/%E8%91%B3-%E9%9F%A9-3569a014b/?locale=en_US" target="_blank" rel="noopener">
+            <a itemprop="sameAs" href="https://www.linkedin.com/in/weihan95/?locale=en_US" target="_blank" rel="noopener">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
